build: update to gradle 9.6.1